# PyWeCom

./: README.md  pyproject.toml  setup.cfg  setup.py
src/: __init__.py
src/pywecom/: __init__.py  base.py  exception.py
