[metadata]
name = PyWeCom
version = 0.0.1
author = alex
author_email = liu_zhao_feng_alex@163.com
description = WeCom SDK for Python
long_description = file: README.md
url = https://github.com/Matrix-King-Studio/PyWeCom
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
